# server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_FEATURES.md
docs/: ARCHITECTURE.md  TESTING_CHECKLIST.md
include/: channel.h  error.h  logging.h  protocol.h  room.h  server.h  user.h
scripts/: build-release.sh
src/: channel.cpp  main.cpp  room.cpp  server.cpp
tests/: unit_tests.cpp
